test/Vehicle/Test/CompileMode/Error/LinearityErrors/quadraticTensorInputLookup.vcl
network f : Vector Rat 1 -> Vector Rat 1

property : Bool
property = forall x . (x ! 0) * (x ! 0) > 0 and f x ! 0 > 0